--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,11 @@ jobs:
       - name: Yarn Cache
         uses: c-hive/gha-yarn-cache@v1
 
+      - name: Update dependencies
+        run: npm update
+        
       - name: Install dependencies
-        run: yarn
+        run: npm install
 
       - name: Build React App
         run: yarn build
