--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Yarn Cache
-        uses: c-hive/gha-yarn-cache@v1
+        uses: c-hive/gha-npm-cache@v1
 
       - name: Update dependencies
         run: npm update
